# boom-apptainer

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.gpu  Makefile  README.md  apptainer.sh  config.yaml  docker-compose.cuda.yaml  docker-compose.cutouts-mongo.yaml  docker-compose.cutouts-s3-external.yaml  docker-compose.cutouts-s3.yaml  docker-compose.override.yaml  docker-compose.yaml
.github/workflows/: deploy.yaml  sync-configs.yaml  test-throughput.yaml  test.yaml
apptainer/def/: api.def  boom-gpu.def  boom.def  dev.def
apptainer/scripts/: apptainer_start.sh  build-sif.sh
config/: otel-collector-config.yaml  prometheus.yaml
config/grafana/dashboards/: boom-infrastructure.json  boom-overview.json
config/grafana/provisioning/alerting/: contact-points.yaml  rules.yaml
config/grafana/provisioning/datasources/: prometheus.yaml
config/loki/: loki-config.yaml
config/prod/caltech/: config.yaml  overrides.yaml
config/promtail/: promtail-config.yaml
config/tempo/: tempo-config.yaml
docs/: deployment.md  gpu.md  observability.md
src/: conf.rs  lib.rs
src/alert/: base.rs  decam.rs  lsst.rs  mod.rs  ztf.rs
src/api/: auth.rs  db.rs  docs.rs
src/api/routes/: catalogs.rs  filters.rs
src/api/routes/babamul/: mod.rs  tokens.rs
src/api/routes/babamul/stats/: collections.rs  kafka.rs  mod.rs  nightly.rs
src/api/routes/babamul/surveys/: alerts.rs  cutouts.rs  objects.rs
src/api/routes/surveys/: cutouts.rs
src/enrichment/: base.rs  decam.rs  lsst.rs  mod.rs  ztf.rs
src/enrichment/models/: acai.rs  base.rs  btsbot.rs  mod.rs
src/filter/: base.rs  lsst.rs  mod.rs  ztf.rs
src/gpu/: mod.rs  pool.rs
src/kafka/: base.rs  decam.rs  lsst.rs  ztf.rs
src/scheduler/: base.rs  mod.rs  observability.rs
src/utils/: cutouts.rs  data.rs  db.rs  enums.rs  fits.rs  mod.rs  parser.rs  retry.rs  spatial.rs  testing.rs  worker.rs
src/utils/o11y/: logging.rs  metrics.rs  mod.rs  tracing.rs
tests/: config.test.yaml  test_api.rs  test_babamul.rs  test_conf.rs  test_decam.rs  test_lsst.rs  test_ztf.rs
tests/api/: mod.rs  test_babamul.rs  test_filters.rs  test_surveys.rs
tests/throughput/: _run.sh  apptainer_mongo-init.sh  compose.cuda.yaml  compose.cutouts-mongo.yaml  compose.cutouts-s3.yaml  compose.yaml  run.py
