[package]
name = "boom"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.13.0"
aes-gcm = "0.10.3"
apache-avro = { version = "0.21.0", features = ["snappy", "derive"] }
apache-avro-derive = "0.21.0"
apache-avro-macros = { version = "1", path = "apache-avro-macros" }
async-channel = "2.5.0"
async-trait = "0.1.89"
aws-config = "1.8.16"
aws-sdk-s3 = "1.132.0"
base64 = "0.22.1"
bcrypt = "0.19.1"
cdshealpix = "0.9.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
config = "0.15.23"
constcat = "0.6.1"
dotenvy = "0.15.7"
flare = "0.2.0"
futures = "0.3.32"
hifitime = "4.3.0"
indicatif = "0.18.4"
itertools = "0.14.0"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
lettre = "0.11"
moc = "0.19.2"
mongodb = "3.6.0"
ndarray = "0.17.2"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
rand = "0.10.1"
rdkafka = { version = "0.39.0", features = ["gssapi", "ssl-vendored", "tracing", "sasl", "zstd"] }
redis = { version = "1.2.1", features = ["tokio-comp"] }
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.20.0", features = ["base64"] }
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "signal"] }
tracing = "0.1.44"
tracing-flame = "0.2.0"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "registry"]}
utoipa = { version = "5.5.0", features = ["actix_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }
uuid = { version = "1.23", features = ["v4"] }
which = "8.0.2"
zstd = "0.13"
zune-inflate = { version = "0.2", default-features = false, features = [
    "gzip",
    "std",
] }

# on mac os silicon platform, install ort with the coreml feature
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.12", features = ["coreml"] }

# otherwise, install ort with the cuda feature
[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.12", features = ["cuda", "load-dynamic"] }

[workspace]
members = ["apache-avro-macros"]
